package audioOutputs;

//synchronized object for radio and hi-fi threads
public class RadioState {
    public boolean isWorking=false;
}
